# pam-sys2

./: Cargo.toml  README.md  build.rs  wrapper-linuxpam.h  wrapper-openpam.h
.github/workflows/: ci.yml
src/: lib.rs  linux_pam.rs  linuxpam.rs  openpam.rs
